Add machine info

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
   <div id="status-bar">
     <div id="controller-status">controller: disconnected</div>
     <div id="server-version">server: v…</div>
+    <div id="machine-status">machine: …</div>
     <div id="ws-status">ws: disconnected</div>
   </div>
 
