Display filename of audio being played

--- a/app/multi/index.html
+++ b/app/multi/index.html
@@ -64,6 +64,8 @@
                 <input id="upload-file-A" type="file" style="visibility: hidden; width: 0;" accept="audio/*">
                 <button id="upload-A">upload</button>
             </div>
+
+            <div class="channel-filename" id="filename-A">no audio loaded</div>
         </div>
 
         <div id="controls-A" class="controls">
@@ -193,6 +195,8 @@
                 <input id="upload-file-B" type="file" style="visibility: hidden; width: 0;" accept="audio/*">
                 <button id="upload-B">upload</button>
             </div>
+
+            <div class="channel-filename" id="filename-B">no audio loaded</div>
         </div>
 
         <div id="controls-B" class="controls">
