--- a/app/multi/index.html
+++ b/app/multi/index.html
@@ -66,6 +66,7 @@
             </div>
 
             <div class="channel-filename" id="filename-A">no audio loaded</div>
+            <progress class="load-progress" id="progress-A" max="100" value="0" hidden></progress>
         </div>
 
         <div id="controls-A" class="controls">
@@ -197,6 +198,7 @@
             </div>
 
             <div class="channel-filename" id="filename-B">no audio loaded</div>
+            <progress class="load-progress" id="progress-B" max="100" value="0" hidden></progress>
         </div>
 
         <div id="controls-B" class="controls">
