Receive (semi)tone control over socket and normalize

--- a/app/multi/index.html
+++ b/app/multi/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="controls-row">
 
-                <label>semitones</label>
+                <label>(WS) semitones</label>
                 <button class="reset-btn diagram-red" type="button" data-reset-key="semitones"
                         aria-label="Reset semitones"
                         title="Reset to default">
@@ -92,8 +92,8 @@
                         <path d="M12 5a7 7 0 1 1-6.3 4H3l3.5-3.5L10 9H7.9A5 5 0 1 0 12 7c-1 0-2 .3-2.8.9L7.8 6.5A7 7 0 0 1 12 5z"/>
                     </svg>
                 </button>
-                <input type="range" min="-12" max="12" step="1" data-key="semitones" class="diagram-red">
-                <input type="number" min="-12" max="12" step="1" data-key="semitones" class="diagram-red">
+                <input type="range" min="-24" max="24" step="1" data-key="semitones" class="diagram-red">
+                <input type="number" min="-24" max="24" step="1" data-key="semitones" class="diagram-red">
             </div>
             <div class="controls-row">
 
